# petProjectAlgos

./: CMakeLists.txt  main.c
miniStart/: main.mini.c  main.mini.h
primeNumber/: prime.main.c  prime.main.h
sumOfNumberString/: sumnumber.main.c  sumnumber.main.h
